--- a/lib/alveole/components/notice_component/notice_component.html.slim
+++ b/lib/alveole/components/notice_component/notice_component.html.slim
@@ -1,5 +1,5 @@
-.alert
-  .alert__title = @title
-  ul.alert__messages
+.notice class="notice--#{@type}"
+  .notice__title = @title
+  ul.notice__messages
     - @messages.each do |message|
-      .alert__message = message
+      .notice__message = message
