--- a/lib/alveole/components/button_component/button_component.html.slim
+++ b/lib/alveole/components/button_component/button_component.html.slim
@@ -1,2 +1,5 @@
-.button
-  = link_to @label, @url, @options
+= link_to @url, @options.merge(class:['button'] + @modifier_classes) do
+  - if @icon
+    i.button__icon { class=@icon }
+  - unless @options[:icon_only]
+    span.button__label = @label
