--- a/lib/alveole/components/page_component/page_component.html.slim
+++ b/lib/alveole/components/page_component/page_component.html.slim
@@ -1,7 +1,10 @@
 .page
-  .page__header
-    = header
-  .page__content
-    = content
-  .page__actions
-    = actions
+  .page__header_wrapper
+    .page__header
+      = header
+  .page__content_wrapper
+    .page__content
+      = content
+  .page__actions_wrapper
+    .page__actions
+      = actions
