--- a/lib/alveole/components/button_component/button_component.html.slim
+++ b/lib/alveole/components/button_component/button_component.html.slim
@@ -1,5 +1,5 @@
-= link_to @url, @options.merge(class: ['button'] + @modifier_classes) do
+= link_to @url, @options.merge(class: ['button'] + @bem_classes) do
   - if @icon
     i.button__icon { class=@icon }
-  - unless @options[:icon_only]
+  - unless @modifiers.include? :icon_only
     span.button__label = @label
