--- a/lib/alveole/components/heading_component/heading_component.html.slim
+++ b/lib/alveole/components/heading_component/heading_component.html.slim
@@ -1,4 +1,3 @@
-h1.heading
-  = @heading
+= content_tag(@tag_name, class: ['heading'] + @bem_classes)
+  = @label
   = content
-h2.heading--sub = @sub
