Improve notice compoenent

--- a/lib/alveole/components/notice_component/notice_component.html.slim
+++ b/lib/alveole/components/notice_component/notice_component.html.slim
@@ -1,4 +1,4 @@
-.notice class="notice--#{@type}"
+.notice class=@bem_classes
   .notice__title = @title
   ul.notice__messages
     - @messages.each do |message|
