Add foter to table

--- a/lib/alveole/components/table_component/table_component.html.slim
+++ b/lib/alveole/components/table_component/table_component.html.slim
@@ -2,6 +2,9 @@ table.table
   thead
     tr
       = headers
-      th
   tbody
     = content
+  - if footers
+    tfoot
+      tr
+        = footers
