--- a/app/components/alveole/sidebar/group_component.html.erb
+++ b/app/components/alveole/sidebar/group_component.html.erb
@@ -1,5 +1,7 @@
 <alv-sidebar-group class="block space-y-3 ">
   <label class="px-3 text-xs text-gray-500 uppercase dark:text-gray-400"><%= @title%></label>
 
-  <%= content %>
+  <% items.each do |item| %>
+    <%= item %>
+  <% end %>
 </alv-sidebar-group>
