--- a/app/components/alveole/sidebar_component.html.erb
+++ b/app/components/alveole/sidebar_component.html.erb
@@ -1,14 +1,12 @@
 <alv-sidebar class="flex flex-col w-64 h-screen px-5 py-8 overflow-y-auto bg-white border-r rtl:border-r-0 rtl:border-l dark:bg-gray-900 dark:border-gray-700">
-  <% if @logo %>
-    <% link_to @logo_url, class: "mb-6" do %>
-      <%= image_tag @logo, class: "w-auto h-7" %>
-    <% end %>
-  <% end %>
+  <%= heading %>
 
   <div class="flex flex-col justify-between flex-1">
     <nav class="-mx-3 space-y-6 ">
       <div class="space-y-3 ">
-        <%= content %>
+        <% items.each do |item| %>
+          <%= item %>
+        <% end %>
       </div>
     </nav>
   </div>
