--- a/spec/dummy/app/views/layouts/component_preview.html.erb
+++ b/spec/dummy/app/views/layouts/component_preview.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: <%= params[:lookbook][:display][:bg_color] || "white" %>">
+<html class="<%= params[:lookbook][:display][:bg_color] || "bg-white" %>">
 <head>
   <title>Component Preview</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
