--- a/app/components/alveole/button_component.html.erb
+++ b/app/components/alveole/button_component.html.erb
@@ -1,5 +1,5 @@
 <alv-button class="inline-flex">
-  <%= link_to(@href, class: "flex items-center justify-center w-1/2 px-5 py-2 text-sm transition-colors duration-200 rounded-md w-auto gap-x-2 #{@base_class}") do %>
+  <%= link_to(@href, class: "flex items-center justify-center w-1/2 px-5 py-2 font-medium text-sm transition-colors duration-200 rounded-md w-auto gap-x-2 #{@base_class}") do %>
     <% if @icon %>
       <%= render(@icon) %>
       <span><%= content %></span>
