--- a/app/components/alveole/sidebar/heading_component.html.erb
+++ b/app/components/alveole/sidebar/heading_component.html.erb
@@ -1,6 +1,3 @@
 <alv-sidebar-heading class="flex h-16 shrink-0 items-center mb-6">
-  <%= image_tag @image, class: "h-8 w-auto" if @image %>
-  <% if @title %>
-    <span><%= @title %></span>
-  <% end %>
+  <%= content %>
 </alv-sidebar-heading>
