--- a/spec/dummy/app/views/layouts/component_preview.html.erb
+++ b/spec/dummy/app/views/layouts/component_preview.html.erb
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <%= stylesheet_link_tag "alveole", "data-turbo-track": "reload" %>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
-  <%= javascript_importmap_tags %>
+  <%= javascript_importmap_tags "alveole/application" %>
 
   <!--
     NOTE: To add engine's javascript functionality we have to load the
           entrypoint here or `import` it in the main app `application.js`
   -->
-  <%= javascript_import_module_tag "alveole/application" %>
+  <%#= javascript_import_module_tag "alveole/application" %>
 </head>
 <body style="padding: 20px">
   <div style="
